# oec_patch_sample

./: CMakeLists.txt  Dockerfile  README.md  oec.config
include/: ConfigParser.hpp  SignalHandler.hpp
src/: ConfigParser.cpp  SignalHandler.cpp  main.cpp
toolchains/: aarch64.cmake
